# apps/wordle-time-backend/src/main/kotlin/com/wordletime/dto/Requirements.kt
@@ -1,0 +1,16 @@
+package com.wordletime.dto
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class Requirements(val requirements: List<Requirement>)
+
+@Serializable
+data class Requirement(
+  val id: String,
+  val title: String,
+  val reference: String,
+  val description: String,
+  val impact: String,
+  val criteria: List<String>
+)
