# apps/wordle-time-backend/src/main/resources/wordle_time-openapi.yaml
@@ -52,6 +52,16 @@ paths:
             'application/json':
               schema:
                 $ref: "#/components/schemas/GuessResult"
+  /api/requirements:
+    get:
+      description: "Get requirements of the project"
+      responses:
+        "200":
+          description: "OK <br> A file response"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Requirements"
 components:
   schemas:
     OldGameIDError:
@@ -84,3 +94,27 @@ components:
               - "CorrectSpot"
               - "WrongSpot"
               - "WrongLetter"
+    Requirement:
+      type: "object"
+      properties:
+        id:
+          type: "string"
+        title:
+          type: "string"
+        reference:
+          type: "string"
+        description:
+          type: "string"
+        impact:
+          type: "string"
+        criteria:
+          type: "array"
+          items:
+            type: "string"
+    Requirements:
+      type: "object"
+      properties:
+        requirements:
+          type: "array"
+          items:
+            $ref: "#/components/schemas/Requirement"
